phase2/y.output
Terminals unused in grammar

   FOR


State 0 conflicts: 1 shift/reduce, 1 reduce/reduce
State 3 conflicts: 1 shift/reduce, 1 reduce/reduce
State 4 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog_start $end

    1 prog_start: %empty
    2           | functions prog_start

    3 functions: %empty
    4          | function functions

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    6 declarations: %empty
    7             | declaration SEMICOLON declarations

    8 declaration: identifiers COLON INTEGER
    9            | identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   10            | identifiers error INTEGER

   11 identifiers: ident
   12            | ident COMMA identifiers

   13 ident: IDENT

   14 statements: %empty
   15           | statement SEMICOLON statements

   16 statement: var ASSIGN expression
   17          | IF bool_exp THEN statements ENDIF
   18          | IF bool_exp THEN statements ELSE statements ENDIF
   19          | WHILE bool_exp BEGINLOOP statements ENDLOOP
   20          | DO BEGINLOOP statements ENDLOOP WHILE bool_exp
   21          | FOREACH ident IN ident BEGINLOOP statements ENDLOOP
   22          | READ vars
   23          | WRITE vars
   24          | CONTINUE
   25          | RETURN expression

   26 bool_exp: relation_and_exp
   27         | relation_and_exp OR bool_exp

   28 relation_and_exp: relation_exp
   29                 | relation_exp AND relation_and_exp

   30 relation_exp: expression comp expression
   31             | TRUE
   32             | FALSE
   33             | L_PAREN bool_exp R_PAREN
   34             | NOT expression comp expression
   35             | NOT TRUE
   36             | NOT FALSE
   37             | NOT L_PAREN bool_exp R_PAREN

   38 comp: EQ
   39     | NEQ
   40     | GT
   41     | LT
   42     | GTE
   43     | LTE

   44 expression: multiplicative_expr
   45           | multiplicative_expr ADD expression
   46           | multiplicative_expr SUB expression

   47 multiplicative_expr: term
   48                    | term MULT multiplicative_expr
   49                    | term DIV multiplicative_expr
   50                    | term MOD multiplicative_expr

   51 term: var
   52     | NUMBER
   53     | L_PAREN expression R_PAREN
   54     | SUB var
   55     | SUB NUMBER
   56     | SUB L_PAREN expression R_PAREN
   57     | ident bterm

   58 bterm: L_PAREN bterm_ex R_PAREN
   59      | L_PAREN R_PAREN

   60 bterm_ex: expression
   61         | expression COMMA bterm_ex

   62 var: ident
   63    | ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET

   64 vars: var
   65     | var COMMA vars


Terminals, with rules where they appear

$end (0) 0
error (256) 10
NUMBER (258) 9 52 55
IDENT (259) 13
FUNCTION (260) 5
BEGIN_PARAMS (261) 5
END_PARAMS (262) 5
BEGIN_LOCALS (263) 5
END_LOCALS (264) 5
BEGIN_BODY (265) 5
END_BODY (266) 5
INTEGER (267) 8 9 10
ARRAY (268) 9
OF (269) 9
IF (270) 17 18
THEN (271) 17 18
ENDIF (272) 17 18
ELSE (273) 18
WHILE (274) 19 20
DO (275) 20
FOREACH (276) 21
IN (277) 21
BEGINLOOP (278) 19 20 21
ENDLOOP (279) 19 20 21
CONTINUE (280) 24
READ (281) 22
WRITE (282) 23
AND (283) 29
OR (284) 27
NOT (285) 34 35 36 37
TRUE (286) 31 35
FALSE (287) 32 36
RETURN (288) 25
FOR (289)
ADD (290) 45
SUB (291) 46 54 55 56
MULT (292) 48
DIV (293) 49
MOD (294) 50
EQ (295) 38
NEQ (296) 39
LT (297) 41
GT (298) 40
LTE (299) 43
GTE (300) 42
SEMICOLON (301) 5 7 15
COLON (302) 8 9
COMMA (303) 12 61 65
L_PAREN (304) 33 37 53 56 58 59
R_PAREN (305) 33 37 53 56 58 59
L_SQUARE_BRACKET (306) 9 63
R_SQUARE_BRACKET (307) 9 63
ASSIGN (308) 16


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
prog_start (55)
    on left: 1 2, on right: 0 2
functions (56)
    on left: 3 4, on right: 2 4
function (57)
    on left: 5, on right: 4
declarations (58)
    on left: 6 7, on right: 5 7
declaration (59)
    on left: 8 9 10, on right: 7
identifiers (60)
    on left: 11 12, on right: 8 9 10 12
ident (61)
    on left: 13, on right: 5 11 12 21 57 62 63
statements (62)
    on left: 14 15, on right: 5 15 17 18 19 20 21
statement (63)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 15
bool_exp (64)
    on left: 26 27, on right: 17 18 19 20 27 33 37
relation_and_exp (65)
    on left: 28 29, on right: 26 27 29
relation_exp (66)
    on left: 30 31 32 33 34 35 36 37, on right: 28 29
comp (67)
    on left: 38 39 40 41 42 43, on right: 30 34
expression (68)
    on left: 44 45 46, on right: 16 25 30 34 45 46 53 56 60 61 63
multiplicative_expr (69)
    on left: 47 48 49 50, on right: 44 45 46 48 49 50
term (70)
    on left: 51 52 53 54 55 56 57, on right: 47 48 49 50
bterm (71)
    on left: 58 59, on right: 57
bterm_ex (72)
    on left: 60 61, on right: 58 61
var (73)
    on left: 62 63, on right: 16 51 54 64 65
vars (74)
    on left: 64 65, on right: 22 23 65


State 0

    0 $accept: . prog_start $end

    FUNCTION  shift, and go to state 1

    $end      reduce using rule 1 (prog_start)
    $end      [reduce using rule 3 (functions)]
    FUNCTION  [reduce using rule 3 (functions)]
    $default  reduce using rule 1 (prog_start)

    prog_start  go to state 2
    functions   go to state 3
    function    go to state 4


State 1

    5 function: FUNCTION . ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    ident  go to state 6


State 2

    0 $accept: prog_start . $end

    $end  shift, and go to state 7


State 3

    2 prog_start: functions . prog_start

    FUNCTION  shift, and go to state 1

    $end      reduce using rule 1 (prog_start)
    $end      [reduce using rule 3 (functions)]
    FUNCTION  [reduce using rule 3 (functions)]
    $default  reduce using rule 1 (prog_start)

    prog_start  go to state 8
    functions   go to state 3
    function    go to state 4


State 4

    4 functions: function . functions

    FUNCTION  shift, and go to state 1

    FUNCTION  [reduce using rule 3 (functions)]
    $default  reduce using rule 3 (functions)

    functions  go to state 9
    function   go to state 4


State 5

   13 ident: IDENT .

    $default  reduce using rule 13 (ident)


State 6

    5 function: FUNCTION ident . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 10


State 7

    0 $accept: prog_start $end .

    $default  accept


State 8

    2 prog_start: functions prog_start .

    $default  reduce using rule 2 (prog_start)


State 9

    4 functions: function functions .

    $default  reduce using rule 4 (functions)


State 10

    5 function: FUNCTION ident SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 11


State 11

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 6 (declarations)

    declarations  go to state 12
    declaration   go to state 13
    identifiers   go to state 14
    ident         go to state 15


State 12

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 16


State 13

    7 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 17


State 14

    8 declaration: identifiers . COLON INTEGER
    9            | identifiers . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   10            | identifiers . error INTEGER

    error  shift, and go to state 18
    COLON  shift, and go to state 19


State 15

   11 identifiers: ident .
   12            | ident . COMMA identifiers

    COMMA  shift, and go to state 20

    $default  reduce using rule 11 (identifiers)


State 16

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 21


State 17

    7 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 5

    $default  reduce using rule 6 (declarations)

    declarations  go to state 22
    declaration   go to state 13
    identifiers   go to state 14
    ident         go to state 15


State 18

   10 declaration: identifiers error . INTEGER

    INTEGER  shift, and go to state 23


State 19

    8 declaration: identifiers COLON . INTEGER
    9            | identifiers COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 24
    ARRAY    shift, and go to state 25


State 20

   12 identifiers: ident COMMA . identifiers

    IDENT  shift, and go to state 5

    identifiers  go to state 26
    ident        go to state 15


State 21

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 6 (declarations)

    declarations  go to state 27
    declaration   go to state 13
    identifiers   go to state 14
    ident         go to state 15


State 22

    7 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 7 (declarations)


State 23

   10 declaration: identifiers error INTEGER .

    $default  reduce using rule 10 (declaration)


State 24

    8 declaration: identifiers COLON INTEGER .

    $default  reduce using rule 8 (declaration)


State 25

    9 declaration: identifiers COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 28


State 26

   12 identifiers: ident COMMA identifiers .

    $default  reduce using rule 12 (identifiers)


State 27

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY statements END_BODY

    END_LOCALS  shift, and go to state 29


State 28

    9 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 30


State 29

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY statements END_BODY

    BEGIN_BODY  shift, and go to state 31


State 30

    9 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 32


State 31

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . statements END_BODY

    IDENT     shift, and go to state 5
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    FOREACH   shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40

    $default  reduce using rule 14 (statements)

    ident       go to state 41
    statements  go to state 42
    statement   go to state 43
    var         go to state 44


State 32

    9 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 45


State 33

   17 statement: IF . bool_exp THEN statements ENDIF
   18          | IF . bool_exp THEN statements ELSE statements ENDIF

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51

    ident                go to state 52
    bool_exp             go to state 53
    relation_and_exp     go to state 54
    relation_exp         go to state 55
    expression           go to state 56
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 34

   19 statement: WHILE . bool_exp BEGINLOOP statements ENDLOOP

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51

    ident                go to state 52
    bool_exp             go to state 60
    relation_and_exp     go to state 54
    relation_exp         go to state 55
    expression           go to state 56
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 35

   20 statement: DO . BEGINLOOP statements ENDLOOP WHILE bool_exp

    BEGINLOOP  shift, and go to state 61


State 36

   21 statement: FOREACH . ident IN ident BEGINLOOP statements ENDLOOP

    IDENT  shift, and go to state 5

    ident  go to state 62


State 37

   24 statement: CONTINUE .

    $default  reduce using rule 24 (statement)


State 38

   22 statement: READ . vars

    IDENT  shift, and go to state 5

    ident  go to state 41
    var    go to state 63
    vars   go to state 64


State 39

   23 statement: WRITE . vars

    IDENT  shift, and go to state 5

    ident  go to state 41
    var    go to state 63
    vars   go to state 65


State 40

   25 statement: RETURN . expression

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 66

    ident                go to state 52
    expression           go to state 67
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 41

   62 var: ident .
   63    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 68

    $default  reduce using rule 62 (var)


State 42

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements . END_BODY

    END_BODY  shift, and go to state 69


State 43

   15 statements: statement . SEMICOLON statements

    SEMICOLON  shift, and go to state 70


State 44

   16 statement: var . ASSIGN expression

    ASSIGN  shift, and go to state 71


State 45

    9 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 72


State 46

   52 term: NUMBER .

    $default  reduce using rule 52 (term)


State 47

   34 relation_exp: NOT . expression comp expression
   35             | NOT . TRUE
   36             | NOT . FALSE
   37             | NOT . L_PAREN bool_exp R_PAREN

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    TRUE     shift, and go to state 73
    FALSE    shift, and go to state 74
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 75

    ident                go to state 52
    expression           go to state 76
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 48

   31 relation_exp: TRUE .

    $default  reduce using rule 31 (relation_exp)


State 49

   32 relation_exp: FALSE .

    $default  reduce using rule 32 (relation_exp)


State 50

   54 term: SUB . var
   55     | SUB . NUMBER
   56     | SUB . L_PAREN expression R_PAREN

    NUMBER   shift, and go to state 77
    IDENT    shift, and go to state 5
    L_PAREN  shift, and go to state 78

    ident  go to state 41
    var    go to state 79


State 51

   33 relation_exp: L_PAREN . bool_exp R_PAREN
   53 term: L_PAREN . expression R_PAREN

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51

    ident                go to state 52
    bool_exp             go to state 80
    relation_and_exp     go to state 54
    relation_exp         go to state 55
    expression           go to state 81
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 52

   57 term: ident . bterm
   62 var: ident .
   63    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 82
    L_SQUARE_BRACKET  shift, and go to state 68

    $default  reduce using rule 62 (var)

    bterm  go to state 83


State 53

   17 statement: IF bool_exp . THEN statements ENDIF
   18          | IF bool_exp . THEN statements ELSE statements ENDIF

    THEN  shift, and go to state 84


State 54

   26 bool_exp: relation_and_exp .
   27         | relation_and_exp . OR bool_exp

    OR  shift, and go to state 85

    $default  reduce using rule 26 (bool_exp)


State 55

   28 relation_and_exp: relation_exp .
   29                 | relation_exp . AND relation_and_exp

    AND  shift, and go to state 86

    $default  reduce using rule 28 (relation_and_exp)


State 56

   30 relation_exp: expression . comp expression

    EQ   shift, and go to state 87
    NEQ  shift, and go to state 88
    LT   shift, and go to state 89
    GT   shift, and go to state 90
    LTE  shift, and go to state 91
    GTE  shift, and go to state 92

    comp  go to state 93


State 57

   44 expression: multiplicative_expr .
   45           | multiplicative_expr . ADD expression
   46           | multiplicative_expr . SUB expression

    ADD  shift, and go to state 94
    SUB  shift, and go to state 95

    $default  reduce using rule 44 (expression)


State 58

   47 multiplicative_expr: term .
   48                    | term . MULT multiplicative_expr
   49                    | term . DIV multiplicative_expr
   50                    | term . MOD multiplicative_expr

    MULT  shift, and go to state 96
    DIV   shift, and go to state 97
    MOD   shift, and go to state 98

    $default  reduce using rule 47 (multiplicative_expr)


State 59

   51 term: var .

    $default  reduce using rule 51 (term)


State 60

   19 statement: WHILE bool_exp . BEGINLOOP statements ENDLOOP

    BEGINLOOP  shift, and go to state 99


State 61

   20 statement: DO BEGINLOOP . statements ENDLOOP WHILE bool_exp

    IDENT     shift, and go to state 5
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    FOREACH   shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40

    $default  reduce using rule 14 (statements)

    ident       go to state 41
    statements  go to state 100
    statement   go to state 43
    var         go to state 44


State 62

   21 statement: FOREACH ident . IN ident BEGINLOOP statements ENDLOOP

    IN  shift, and go to state 101


State 63

   64 vars: var .
   65     | var . COMMA vars

    COMMA  shift, and go to state 102

    $default  reduce using rule 64 (vars)


State 64

   22 statement: READ vars .

    $default  reduce using rule 22 (statement)


State 65

   23 statement: WRITE vars .

    $default  reduce using rule 23 (statement)


State 66

   53 term: L_PAREN . expression R_PAREN

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 66

    ident                go to state 52
    expression           go to state 103
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 67

   25 statement: RETURN expression .

    $default  reduce using rule 25 (statement)


State 68

   63 var: ident L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 66

    ident                go to state 52
    expression           go to state 104
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 69

    5 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY .

    $default  reduce using rule 5 (function)


State 70

   15 statements: statement SEMICOLON . statements

    IDENT     shift, and go to state 5
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    FOREACH   shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40

    $default  reduce using rule 14 (statements)

    ident       go to state 41
    statements  go to state 105
    statement   go to state 43
    var         go to state 44


State 71

   16 statement: var ASSIGN . expression

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 66

    ident                go to state 52
    expression           go to state 106
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 72

    9 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 9 (declaration)


State 73

   35 relation_exp: NOT TRUE .

    $default  reduce using rule 35 (relation_exp)


State 74

   36 relation_exp: NOT FALSE .

    $default  reduce using rule 36 (relation_exp)


State 75

   37 relation_exp: NOT L_PAREN . bool_exp R_PAREN
   53 term: L_PAREN . expression R_PAREN

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51

    ident                go to state 52
    bool_exp             go to state 107
    relation_and_exp     go to state 54
    relation_exp         go to state 55
    expression           go to state 81
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 76

   34 relation_exp: NOT expression . comp expression

    EQ   shift, and go to state 87
    NEQ  shift, and go to state 88
    LT   shift, and go to state 89
    GT   shift, and go to state 90
    LTE  shift, and go to state 91
    GTE  shift, and go to state 92

    comp  go to state 108


State 77

   55 term: SUB NUMBER .

    $default  reduce using rule 55 (term)


State 78

   56 term: SUB L_PAREN . expression R_PAREN

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 66

    ident                go to state 52
    expression           go to state 109
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 79

   54 term: SUB var .

    $default  reduce using rule 54 (term)


State 80

   33 relation_exp: L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 110


State 81

   30 relation_exp: expression . comp expression
   53 term: L_PAREN expression . R_PAREN

    EQ       shift, and go to state 87
    NEQ      shift, and go to state 88
    LT       shift, and go to state 89
    GT       shift, and go to state 90
    LTE      shift, and go to state 91
    GTE      shift, and go to state 92
    R_PAREN  shift, and go to state 111

    comp  go to state 93


State 82

   58 bterm: L_PAREN . bterm_ex R_PAREN
   59      | L_PAREN . R_PAREN

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 66
    R_PAREN  shift, and go to state 112

    ident                go to state 52
    expression           go to state 113
    multiplicative_expr  go to state 57
    term                 go to state 58
    bterm_ex             go to state 114
    var                  go to state 59


State 83

   57 term: ident bterm .

    $default  reduce using rule 57 (term)


State 84

   17 statement: IF bool_exp THEN . statements ENDIF
   18          | IF bool_exp THEN . statements ELSE statements ENDIF

    IDENT     shift, and go to state 5
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    FOREACH   shift, and go to state 36
    CONTINUE  shift, and go to state 37
    READ      shift, and go to state 38
    WRITE     shift, and go to state 39
    RETURN    shift, and go to state 40

    $default  reduce using rule 14 (statements)

    ident       go to state 41
    statements  go to state 115
    statement   go to state 43
    var         go to state 44


State 85

   27 bool_exp: relation_and_exp OR . bool_exp

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51

    ident                go to state 52
    bool_exp             go to state 116
    relation_and_exp     go to state 54
    relation_exp         go to state 55
    expression           go to state 56
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 86

   29 relation_and_exp: relation_exp AND . relation_and_exp

    NUMBER   shift, and go to state 46
    IDENT    shift, and go to state 5
    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51

    ident                go to state 52
    relation_and_exp     go to state 117
    relation_exp         go to state 55
    expression           go to state 56
    multiplicative_expr  go to state 57
    term                 go to state 58
    var                  go to state 59


State 87

   38 comp: EQ .

    $default  reduce using rule 38 (comp)


State 88

   39 comp: NEQ .

    $default  reduce using rule 39 (comp)


State 89

   41 comp: LT .

    $default  reduce using rule 41 (comp)


State 90

   40 comp: GT .

    $default  reduce using rule 40 (comp)


State 91

   43 comp: LTE .

    $default  reduce using rule 43 (comp)


State 92

   42 comp: GTE .

    $default  reduce using rule 42 (comp)


State 93

   30 relation_exp: expression comp . expression
